@@ -76,6 +76,10 @@ The following directives can be used outside of a test:
 <dd>Defines the named variable to the given value if it does not already have a
 value.
 </dd>
+<dt>FILE-ID "identifier"
+</dt>
+<dd>Specifies an identifier string for the current file.
+</dd>
 <dt>IGNORE-ERRORS yes
 </dt>
 <dd></dd>
@@ -270,6 +274,10 @@ resulted in an error/failure.
 <dd>Specifies an expected response status-code value. Additional requirements can be
 added as predicates - see the "STATUS PREDICATES" section for more information
 on predicates.
+</dd>
+<dt>TEST-ID "identifier"
+</dt>
+<dd>Specifies an identifier string for the current test.
 </dd>
 <dt>TRANSFER auto
 </dt>
