@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.7b2
 
 	- The ipptool program did not continue past include file errors by
 	  default (<rdar://problem/13875803>)
+	- The ipptool program now supports FILE-ID and TEST-ID directives and
+	  includes their values in its XML output (<rdar://problem/13876038>)
 
 
 CHANGES IN CUPS V1.7b1
